将数据库连接拆分开来